Update .gitignore and remove tracked files

--- a/Daily APOD Wallpaper.xcodeproj/xcshareddata/xcschemes/Daily APOD Wallpaper.xcscheme
+++ b/Daily APOD Wallpaper.xcodeproj/xcshareddata/xcschemes/Daily APOD Wallpaper.xcscheme
@@ -76,7 +76,7 @@
       </BuildableProductRunnable>
       <EnvironmentVariables>
          <EnvironmentVariable
-            key = "NASA_API_KEY"
+            key = "API_KEY"
             value = "***REMOVED***"
             isEnabled = "YES">
          </EnvironmentVariable>
