UI and Logic Improvements
The UI and Logic improvements were done for the today menu and favorites menu and previous menu was added however not completed yet

--- a/Daily APOD Wallpaper.xcodeproj/xcshareddata/xcschemes/Daily APOD Wallpaper.xcscheme
+++ b/Daily APOD Wallpaper.xcodeproj/xcshareddata/xcschemes/Daily APOD Wallpaper.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1600"
+   LastUpgradeVersion = "1610"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -77,7 +77,7 @@
       <EnvironmentVariables>
          <EnvironmentVariable
             key = "API_KEY"
-            value = "***REMOVED***"
+            value = "X4RdidhfmOBdNCVKHEDMuCk0bI0QVs1pE6YDhniR"
             isEnabled = "YES">
          </EnvironmentVariable>
       </EnvironmentVariables>
